deploy: lingsamuel/GreyLibraryPosts@8d015d3db9b55bab686a25d4f1bb543f06ebf485

--- a/backup/markdown-syntax-test/index.html
+++ b/backup/markdown-syntax-test/index.html
@@ -143,7 +143,7 @@ $$</p><h1 id=criticmarkup>CriticMarkup</h1><p>There are five types of Critic mar
 
   m1 --&gt; m3
   m1 --&gt; m4
-</code></pre></div><p>Shortcode mermaid:</p><link href=/css/mermaid.css type=text/css rel=stylesheet><script defer src=/js/mermaid.js>mermaid.initialize({startOnLoad:true});</script><div class=mermaid align=center>graph LR;
+</code></pre></div><p>Shortcode mermaid:</p><link href=/css/mermaid.css type=text/css rel=stylesheet><script defer src=/js/mermaid.min.js>mermaid.initialize({startOnLoad:true});</script><div class=mermaid align=center>graph LR;
 subgraph sub graph 1
 i1[Item title]
 end
